--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "dependencies": {
     "react": "16.0.0",
-    "react-dom": "16.0.0"
+    "react-dom": "16.0.0",
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.1.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
